--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org</groupId>
     <artifactId>referral-svc</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>refferal-svc</name>
     <description>refferal-svc</description>
     <url/>
